Version 2.02.98
=================================
  Use 'ignore' discards for thin metadata created with older versions.
  Use proper condition to check for unsupported discards settings.
  Update lvs manpage with discards (2.02.97).

Version 2.02.97 - 7th August 2012
=================================
  Issue error message when arguments do not match specified RAID type.
  Improve documention of allocation policies in lvm.8.
  Increase limit for major:minor to 4095:1048575 when using -My option.
  Add make install_systemd_generators.
  Add generator for lvm2 activation systemd units.
  Add lvm_config_find_bool lvm2app fn to retrieve bool value from config tree.
  Respect --test when using lvmetad.
  No longer capitalise first LV attribute char for invalid snapshots.
  Allow vgextend to add PVs to a VG that is missing PVs.
  Recognise Micron PCIe SSDs in filter and move array out to device-types.h.
  Fix dumpconfig <node> to print only <node> without its siblings. (2.02.89)
  Do not issue "Failed to handle a client connection" error if lvmetad killed.
  Support lvchange --discards and -Z with thin pools.
  Add discard LV segment field to reports.
  Add --discards to lvcreate --thin.
  Set discard and external snapshot features if thin pool target is vsn 1.1+.
  Count percentage of completeness upwards not downwards when merging snapshot.
  Skip activation when using vg/lvchange --sysinit -a ay and lvmetad is active.
  Fix extending RAID 4/5/6 logical volumes
  Fix test for PV with unknown VG in process_each_pv to ignore ignored mdas.
  Update man pages with --activate ay option and auto_activation_volume_list.
  Fix _alloc_parallel_area to avoid picking already-full areas for raid devices.
  Use vgchange -aay instead of vgchange -ay in clmvd init script.
  Add activation/auto_activation_volume_list to lvm.conf.
  Add --activate ay to lvcreate, lvchange, pvscan and vgchange.
  Add support for volume autoactivation using lvmetad.